--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <style>
       html, body {
         width: 100vw;
-        min-height: 100vh;
+        height: 100vh;
         margin: 0;
         padding: 0;
         background-color: #bfe3dd;
         color: #000;
-        overflow-x: hidden;
+        overflow: hidden;
       }
       #container {
         width: 100vw;
@@ -26,25 +26,34 @@
         z-index: 1;
       }
       #info-panel {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
         width: 100vw;
         min-height: 20vh;
         max-height: 100vh;
-        margin: 0 auto;
         background: rgba(255,255,255,0.97);
         border-radius: 24px 24px 0 0;
         box-shadow: 0 -8px 32px rgba(0,0,0,0.22);
-        transition: min-height 0.5s cubic-bezier(.4,1.6,.4,1), max-height 0.5s cubic-bezier(.4,1.6,.4,1);
+        transition: min-height 0.4s cubic-bezier(.4,1.6,.4,1), max-height 0.4s cubic-bezier(.4,1.6,.4,1);
         overflow: hidden;
-        position: relative;
-        z-index: 2;
+        z-index: 10;
         display: flex;
         flex-direction: column;
       }
+      .drag-handle {
+        width: 40px;
+        height: 5px;
+        background: #bbb;
+        border-radius: 3px;
+        margin: 10px auto 8px auto;
+      }
       .info-content {
-        padding: 20px 10px 30px 10px;
-        overflow-y: auto;
+        padding: 0 10px 30px 10px;
+        overflow-y: hidden;
         height: 100%;
-        transition: max-height 0.5s cubic-bezier(.4,1.6,.4,1);
+        transition: max-height 0.4s cubic-bezier(.4,1.6,.4,1);
       }
       .section-title {
         font-size: 1.2em;
@@ -84,9 +93,10 @@
           width: 340px;
           min-height: 200px;
           max-height: 90vh;
-          position: fixed;
+          left: auto;
           right: 20px;
           top: 20px;
+          bottom: auto;
           border-radius: 10px;
         }
       }
@@ -299,6 +309,10 @@
           { label: 'Total Transfers', value: '4' },
           { label: 'Blockchain', value: 'Ethereum' }
         ];
+        // --- Drag handle ---
+        const dragHandle = document.createElement('div');
+        dragHandle.className = 'drag-handle';
+        infoPanel.appendChild(dragHandle);
         // --- Contenuto scrollabile ---
         const content = document.createElement('div');
         content.className = 'info-content';
@@ -328,26 +342,49 @@
         `;
         infoPanel.appendChild(content);
         document.body.appendChild(infoPanel);
-        // --- Espansione progressiva con scroll ---
+        // --- Gestione drag/swipe per espansione ---
         if (isMobile()) {
-          window.addEventListener('scroll', handlePanelExpand);
-          function handlePanelExpand() {
-            const rect = infoPanel.getBoundingClientRect();
-            const scrollY = window.scrollY || window.pageYOffset;
-            // Quando il pannello entra in viewport, espandi progressivamente
-            if (rect.top < window.innerHeight * 0.5) {
-              infoPanel.style.minHeight = '100vh';
-              infoPanel.style.maxHeight = '100vh';
-              content.style.overflowY = 'auto';
-            } else {
-              infoPanel.style.minHeight = '20vh';
-              infoPanel.style.maxHeight = '100vh';
-              content.style.overflowY = 'hidden';
-              content.scrollTop = 0;
+          let minHeight = window.innerHeight * 0.20;
+          let maxHeight = window.innerHeight;
+          let currentHeight = minHeight;
+          let isFullscreen = false;
+          let startY = null;
+          let startHeight = null;
+          let isDragging = false;
+          dragHandle.addEventListener('touchstart', (e) => {
+            if (e.touches.length === 1) {
+              startY = e.touches[0].clientY;
+              startHeight = currentHeight;
+              isDragging = true;
             }
-          }
-          // Trigger iniziale
-          handlePanelExpand();
+          });
+          window.addEventListener('touchmove', (e) => {
+            if (isDragging && e.touches.length === 1) {
+              const delta = startY - e.touches[0].clientY;
+              let newHeight = Math.max(minHeight, Math.min(maxHeight, startHeight + delta));
+              infoPanel.style.minHeight = newHeight + 'px';
+              infoPanel.style.maxHeight = newHeight + 'px';
+              currentHeight = newHeight;
+            }
+          });
+          window.addEventListener('touchend', () => {
+            if (isDragging) {
+              // Snap
+              if (currentHeight > (minHeight + maxHeight) / 2) {
+                infoPanel.style.minHeight = maxHeight + 'px';
+                infoPanel.style.maxHeight = maxHeight + 'px';
+                isFullscreen = true;
+                content.style.overflowY = 'auto';
+              } else {
+                infoPanel.style.minHeight = minHeight + 'px';
+                infoPanel.style.maxHeight = minHeight + 'px';
+                isFullscreen = false;
+                content.scrollTop = 0;
+                content.style.overflowY = 'hidden';
+              }
+              isDragging = false;
+            }
+          });
         }
       }
       
