--- a/index.html
+++ b/index.html
@@ -324,9 +324,57 @@
           <hr/>
           <div class="section-title">Altre info</div>
           <p>Questa sezione può contenere ulteriori dettagli, link, documentazione, ecc.</p>
+          <button id="back-to-main" style="
+            margin: 20px auto 0 auto;
+            display: block;
+            padding: 10px 24px;
+            background-color: #2c3e50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 1em;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            transition: background 0.3s;
+          ">Torna alla vista principale</button>
         `;
         infoPanel.appendChild(content);
         document.body.appendChild(infoPanel);
+        // Pulsante back
+        const backButton = content.querySelector('#back-to-main');
+        backButton.onclick = () => {
+          if (isZoomed) {
+            if (selectedNFT) {
+              const nftName = Object.keys(nftObjects).find(key => nftObjects[key] === selectedNFT);
+              if (nftName) {
+                resetNFT(selectedNFT, nftName);
+              }
+              selectedNFT = null;
+            }
+            const minDistance = getSafeMinDistance(modelBox, camera);
+            controls.minDistance = 0;
+            controls.maxDistance = minDistance * 1.5;
+            controls.enabled = true;
+            gsap.to(camera.position, {
+              x: originalCameraPosition.x,
+              y: originalCameraPosition.y,
+              z: originalCameraPosition.z,
+              duration: 1,
+              ease: "power2.inOut"
+            });
+            gsap.to(controls.target, {
+              x: originalControlsTarget.x,
+              y: originalControlsTarget.y,
+              z: originalControlsTarget.z,
+              duration: 1,
+              ease: "power2.inOut"
+            });
+            document.body.removeChild(infoPanel);
+            isZoomed = false;
+          } else {
+            document.body.removeChild(infoPanel);
+          }
+        };
       }
       
       // Function to hide info panel
