Update Stripe integration with specific product ID

--- a/index.html
+++ b/index.html
@@ -709,16 +709,14 @@
 
       // Function to handle preorder
       window.handlePreorder = function(nftName) {
-        fetch("https://kaizenera-stripe-backend.onrender.com/create-checkout-session", {
+        fetch("https://kaizen-stripe-backend.onrender.com/create-checkout-session", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             item: {
               price_data: {
                 currency: "eur",
-                product_data: {
-                  name: `${nfts[nftName].title} - Preorder`
-                },
+                product: "prod_SWQnMWHMStKsyl",
                 unit_amount: 4900 // 49,00 €
               },
               quantity: 1
