Optimize server.js: Add CORS caching, performance improvements, and better error handling

--- a/index.html
+++ b/index.html
@@ -709,14 +709,16 @@
 
       // Function to handle preorder
       window.handlePreorder = function(nftName) {
-        fetch("https://kaizen-stripe-backend.onrender.com/create-checkout-session", {
+        fetch("https://kaizenera-stripe-backend.onrender.com/create-checkout-session", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             item: {
               price_data: {
                 currency: "eur",
-                product: "prod_SWQnMWHMStKsyl",
+                product_data: {
+                  name: `${nfts[nftName].title} - Preorder`
+                },
                 unit_amount: 4900 // 49,00 €
               },
               quantity: 1
