--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -810,8 +810,7 @@
           body: JSON.stringify({
             line_items: [{
               price: 'price_1RgQTeRuBfDvOQFuFQ6VjNQY',
-              quantity: 1,
-              adjustable_quantity: { enabled: true, minimum: 1 }
+              quantity: 1
             }],
             mode: 'payment'
           })
