--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -120,31 +120,34 @@
       }
       .donate-button {
         position: fixed;
-        bottom: 24px;
-        right: 24px;
+        bottom: 32px;
+        left: 32px;
         z-index: 9999;
-        background: linear-gradient(90deg, #00c6ff 0%, #0072ff 100%);
-        color: #fff;
-        border: none;
+        background: linear-gradient(90deg, #36b9bd 0%, #6fc7a9 100%);
+        color: #f5ffff;
+        border: 2px solid #bfe3dd;
         border-radius: 32px;
         padding: 16px 32px;
         font-size: 18px;
         font-weight: bold;
-        box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+        box-shadow: 0 4px 24px rgba(54,185,189,0.18);
         cursor: pointer;
-        transition: background 0.2s, transform 0.2s;
+        transition: background 0.2s, transform 0.2s, opacity 0.2s;
+        backdrop-filter: blur(8px);
+        display: flex;
+        align-items: center;
+        gap: 10px;
       }
       .donate-button:hover {
-        background: linear-gradient(90deg, #0072ff 0%, #00c6ff 100%);
+        background: linear-gradient(90deg, #6fc7a9 0%, #36b9bd 100%);
         transform: translateY(-2px) scale(1.04);
+        opacity: 0.95;
       }
       @media (max-width: 700px) {
         .donate-button {
-          right: 10px;
           left: 10px;
-          width: calc(100vw - 20px);
           bottom: 10px;
-          padding: 14px 0;
+          padding: 14px 18px;
           font-size: 16px;
         }
       }
@@ -153,7 +156,7 @@
   <body>
     <div id="container"></div>
     <button class="back-button" id="backButton">Torna alla vista principale</button>
-    <button id="donateButton" class="donate-button">Dona ora per il progetto</button>
+    <button id="donateButton" class="donate-button"><span style="font-size:1.2em;">🌱</span> Dona per il progetto</button>
     <script type="module">
       import * as THREE from './three.module.js';
       import { OrbitControls } from './OrbitControls.js';
@@ -758,46 +761,24 @@
         .then(data => window.location.href = data.url);
       };
 
-      // Make hideNFTDetails available globally
-      window.hideNFTDetails = function() {
-        if (isZoomed) {
-          if (selectedNFT) {
-            const nftName = Object.keys(nftObjects).find(key => nftObjects[key] === selectedNFT);
-            if (nftName) {
-              resetNFT(selectedNFT, nftName);
-            }
-            selectedNFT = null;
-          }
-          const minDistance = getSafeMinDistance(modelBox, camera);
-          controls.minDistance = 0;
-          controls.maxDistance = minDistance * 1.5;
-          controls.enabled = true;
-          gsap.to(camera.position, {
-            x: originalCameraPosition.x,
-            y: originalCameraPosition.y,
-            z: originalCameraPosition.z,
-            duration: 1,
-            ease: "power2.inOut"
-          });
-          gsap.to(controls.target, {
-            x: originalControlsTarget.x,
-            y: originalControlsTarget.y,
-            z: originalControlsTarget.z,
-            duration: 1,
-            ease: "power2.inOut"
-          });
-          const infoPanel = document.getElementById('info-panel');
-          if (infoPanel) {
-            document.body.removeChild(infoPanel);
-          }
-          isZoomed = false;
-        } else {
-          const infoPanel = document.getElementById('info-panel');
-          if (infoPanel) {
-            document.body.removeChild(infoPanel);
-          }
-        }
-        document.querySelector('.back-button').style.display = 'none';
+      // Logica smart: nascondi il pulsante quando il pannello info NFT è visibile
+      function setDonateButtonVisibility(visible) {
+        const btn = document.getElementById('donateButton');
+        btn.style.display = visible ? 'flex' : 'none';
+      }
+      // Mostra il pulsante all'avvio
+      setDonateButtonVisibility(true);
+
+      // Hook su showInfoPanel/hideInfoPanel
+      const originalShowInfoPanel = window.showInfoPanel;
+      window.showInfoPanel = function(...args) {
+        setDonateButtonVisibility(false);
+        return originalShowInfoPanel.apply(this, args);
+      };
+      const originalHideNFTDetails = window.hideNFTDetails;
+      window.hideNFTDetails = function(...args) {
+        setDonateButtonVisibility(true);
+        return originalHideNFTDetails.apply(this, args);
       };
 
       // Add click handler for back button
