--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -121,7 +121,8 @@
       .donate-button {
         position: fixed;
         bottom: 32px;
-        left: 32px;
+        left: 50%;
+        transform: translateX(-50%);
         z-index: 9999;
         background: linear-gradient(90deg, #36b9bd 0%, #6fc7a9 100%);
         color: #f5ffff;
@@ -140,15 +141,19 @@
       }
       .donate-button:hover {
         background: linear-gradient(90deg, #6fc7a9 0%, #36b9bd 100%);
-        transform: translateY(-2px) scale(1.04);
+        transform: translateX(-50%) translateY(-2px) scale(1.04);
         opacity: 0.95;
       }
       @media (max-width: 700px) {
         .donate-button {
-          left: 10px;
+          left: 50%;
           bottom: 10px;
           padding: 14px 18px;
           font-size: 16px;
+          width: calc(100vw - 40px);
+          max-width: 400px;
+          min-width: 180px;
+          transform: translateX(-50%);
         }
       }
     </style>
@@ -156,7 +161,7 @@
   <body>
     <div id="container"></div>
     <button class="back-button" id="backButton">Torna alla vista principale</button>
-    <button id="donateButton" class="donate-button"><span style="font-size:1.2em;">🌱</span> Dona per il progetto</button>
+    <button id="donateButton" class="donate-button">Dona per il progetto</button>
     <script type="module">
       import * as THREE from './three.module.js';
       import { OrbitControls } from './OrbitControls.js';
