--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -230,6 +230,9 @@
       // Camera setup
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
       camera.position.set( 10, 10, 10 );
+      // Salva la posizione e il target "main" all'avvio
+      const mainCameraPosition = camera.position.clone();
+      const mainControlsTarget = new THREE.Vector3(0, 0, 0);
       
       // Controls setup
       const controls = new OrbitControls( camera, renderer.domElement );
@@ -751,14 +754,14 @@
 
       // Function to handle preorder
       window.handlePreorder = function(nftName) {
-        // Mappa NFT -> productId
-        const productMap = {
-          'NFT1Undercover': 'prod_Sc6kvlvdEZRIgn',
-          'NFT2KapitalJeans': 'prod_SWQnMWHMStKsyl',
-          'NFT2KapitalPatched': 'prod_Sc6mngp7AZoc7z'
+        // Mappa NFT -> priceId
+        const priceMap = {
+          'NFT1Undercover': 'price_1RgsX8RuBfDvOQFuSLpKUGdb', // SUPREME X UNDERCOVER COACH JACKET
+          'NFT2KapitalJeans': 'price_1RbNvgRuBfDvOQFug00XbVA9', // KAPITAL PATCHED JEANS CO/ORD
+          'NFT2KapitalPatched': 'price_1RgsYqRuBfDvOQFujgAyK1fM' // KAPITAL PATCHED MULTICOLOR
         };
-        const productId = productMap[nftName];
-        if (!productId) {
+        const priceId = priceMap[nftName];
+        if (!priceId) {
           alert('Prodotto non disponibile per preorder.');
           return;
         }
@@ -766,8 +769,8 @@
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
-            product_id: productId,
-            quantity: 1
+            line_items: [{ price: priceId, quantity: 1 }],
+            mode: 'payment'
           })
         })
         .then(res => res.json())
@@ -793,16 +796,16 @@
         // Reset camera, controlli, stato zoom
         if (isZoomed) {
           gsap.to(camera.position, {
-            x: originalCameraPosition.x,
-            y: originalCameraPosition.y,
-            z: originalCameraPosition.z,
+            x: mainCameraPosition.x,
+            y: mainCameraPosition.y,
+            z: mainCameraPosition.z,
             duration: 1,
             ease: "power2.inOut",
             onComplete: () => {
               controls.enabled = true;
               controls.minDistance = 0;
               controls.maxDistance = modelDistance * 3;
-              controls.target.copy(originalControlsTarget);
+              controls.target.copy(mainControlsTarget);
               controls.update();
               isZoomed = false;
               if (selectedNFT) {
